add swagger for file upload
